# AGM3D

./: CMakeLists.txt  main.cpp
Header/: Greenfunction.cpp  Greenfunction.h  GreenfunctionReactionDiffusion.cpp  GreenfunctionReactionDiffusion.h  axialLine.cpp  axialLine.h  coordinate.cpp  coordinate.h  function.cpp  function.h  matrix.cpp  matrix.h  matrixMulti.cpp  matrixMulti.h  matrixNormal.cpp  matrixNormal.h  matrixRow.cpp  matrixRow.h  plane.cpp  plane.h  point.cpp  point.h  pointHeat.cpp  pointHeat.h  readFile.cpp  readFile.h  solver.cpp  solver.h  util.cpp  util.h  value.cpp  value.h  writeFile.cpp  writeFile.h  writeFileMultiple.cpp  writeFileMultiple.h
